--- a/Task-App-Frontend/src/app/layout/navbar/navbar.html
+++ b/Task-App-Frontend/src/app/layout/navbar/navbar.html
@@ -3,7 +3,7 @@
     <div class="flex justify-between items-center max-w-screen-xl mx-auto p-4">
 
       <a routerLink="/" class="font-bold text-xl text-gray-800">
-        🗂️ Task Management Web
+        🗂️ Task Manage Web
       </a>
 
       <div class="flex items-center space-x-4">
