Display username in navbar

--- a/Task-App-Frontend/src/app/layout/navbar/navbar.html
+++ b/Task-App-Frontend/src/app/layout/navbar/navbar.html
@@ -2,7 +2,7 @@
   <nav class="bg-white/70 backdrop-blur-lg border-b border-white/30 shadow-md">
     <div class="flex justify-between items-center max-w-screen-xl mx-auto p-4">
 
-      <a routerLink="/" class="font-bold text-xl text-gray-800">
+      <a routerLink="/projects" class="font-bold text-xl text-gray-800">
         🗂️ Task Manage Web
       </a>
 
@@ -50,7 +50,7 @@
                    bg-gradient-to-r from-green-500 to-emerald-600
                    text-white font-semibold
                    shadow-md">
-            Hello,  username
+            Hello {{username}}
           </span>
 
           <!-- Logout -->
